--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.9.5</version>
+		    <scope>test</scope>
+		</dependency>
 		<dependency> 
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId> 
